flux/apps/ai/fastcrw/crw/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crw
  namespace: fastcrw
  labels:
    app: crw
spec:
  selector:
    matchLabels:
      app: crw
  replicas: 1
  template:
    metadata:
      labels:
        app: crw
    spec:
      containers:
        - name: crw
          image: ghcr.io/fastcrw/crw:0.37.2 # {"$imagepolicy": "flux-system:crw-policy"}
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 60
          resources:
            requests:
              cpu: 100m
              memory: 32M
            limits:
              cpu: 1000m
              memory: 2G
          volumeMounts:
            - name: crw-config-toml
              mountPath: /app/config.toml
      volumes:
      - name: crw-config-toml
        configMap:
          name: crw-config-toml
      restartPolicy: Always
